--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1><a href="https://github.com/SirTom96/MySite">My website</a></h1>
+                        <h1><a href="https://github.com/SirTom96/SirTom96.github.io">My website</a></h1>
                         <h3>My second project</h3>
                         <p>This website was my second project, coded using HTML5, CSS3 and Javascript.</p>
                     </div>
